[package]
name = "android-transfer-program"
version = "0.1.1"
edition = "2024"
description = "A small CLI application to transfer files to and from Android devices because Android File Transfer sucks now (or at least last time I checked)"
license = "MIT"
repository = "https://github.com/aniketgargya/atp"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
